objects/Policy_Document_Association_On_Case__c.object
<CustomObject>
    <description>Policy Document Association records on Case</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Updated by custom process to indicate the action taken on the Policy Document Association record</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Policy_Document_Associations_On_Case</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certificate Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Policy_Document_Associations_On_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>Policy_Document__r.Document_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>TEXT (Policy_Document__r.Document_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_Assoc_On_Case_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Policy Doc Assoc (On Case) External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Document__c</fullName>
        <label>Document Id</label>
        <referenceTo>Policy_Document_On_Case__c</referenceTo>
        <relationshipName>Policy_Document_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Policy_Doc_Assoc_Id__c</fullName>
        <label>Source Policy Doc Assoc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Policy Document Association (On Case)</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Association Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Document Associations (On Case)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>